adding RU and RO to terms i18n whitelist, updated tr8n strings

--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -444,7 +444,7 @@ ca:
     no content: "El seu pla no té lectures bíbliques programades per aquest dia, de manera que s'ha marcat com completat."
     read today: "Visualització de la lectura d'avui"
     completion status _ below percentage: "Complet"
-    current progress html: "Dia <b<%{day}</b> de <b>%{total_days}</b>"
+    current progress html: "Dia <b>%{day}</b> de <b>%{total_days}</b>"
     start date _ before date string: "Data d'inici:"
     end date _ before date string: "Data final:"
     are you behind: "T'has endarrerit una mica?"
@@ -460,7 +460,7 @@ ca:
     privacy title: "Privacitat"
     stop reading: "Atura la lectura d'aquest pla"
     accountability: "Responsabilitat"
-    email reminder to me: "Envia'm un correu electrònic amb un recordatori cada dia (%{email_adress})"
+    email reminder to me: "Envia'm un correu electrònic amb un recordatori cada dia (%{email_address})"
     email weekly report to a friend: "Envia un resum setmanal a un o més membres de YouVersion"
     calendar: "Calendari"
     search members placeholder: "Troba un membre de YouVersion"
