--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -66,6 +66,7 @@ cs:
   successful sign-out: "Odhlášeno!"
   invalid login: "Nesprávné uživatelské jméno nebo heslo"
   invalid password: "Nesprávné heslo"
+  sign back in: "Pro vaši bezpečnost vyprší přihlášení za dva týdny. Přihlašte se, prosím, znovu."
   youversion: "YouVersion"
   username or email prompt: "Přihlašovací jméno (nebo e-mail)"
   password prompt: "Heslo"
@@ -194,6 +195,7 @@ cs:
     follow: "Sleduj"
     follow user: "Sledovat %{user}"
     unfollow: "Ukončit sledování"
+    unfollow user: "Ukončit sledování uživatele %{user}"
     following title: "Lidé, které následuji"
     user does not follow you: "%{user} vás nenásleduje."
     recent activity: "Nedávná aktivita"
@@ -386,6 +388,7 @@ cs:
     creation form errors: "Následující chyby neumožnily vytvořit záložku:"
     successfully created: "Přidána záložka"
     successfully deleted: "Záložka byla odstraněna"
+    successfully updated: "Záložka aktualizována"
     labels placeholder: "Více štítků oddělte čárkami."
     save: "Uložit záložku"
     confirm delete: "Ano, jsem si jistý/á"
@@ -641,6 +644,15 @@ cs:
   app errors:
     404 explanation: "Možná zkuste začít znovu na <a href='%{reader_path}'>úvodní stránce</a>. Stále máte potíže? Kontaktujte náš <a href='%{support_url}'>tým podpory</a>."
     404 message: "Je nám to líto, ale stránka, kterou hledáte nemohla být nalezena."
+    408 message: "Naše servery naneštěstí neodpověděly včas."
+    408 explanation: "Zkuste to prosím znovu <a href= '%{reload_path}'>obnovením stránky</a>. Obdrželi jsme chybové hlášení a problém budeme co nejrychleji řešit."
   versions:
+    index title: "Dostupné překlady"
     publisher widget title: "Autor"
+    visit publisher: "Přejít na stránky vydavatele"
+    read title: "Číst tento překlad"
+    other versions: "Další překlady tohoto vydavatele"
+    number of versions field: "Celkem překladů:"
+    number of languages field: "Celkem jazyků:"
+    language and count: "%{language_name} (%{language_count})"
     public domain: "Veřejná doména"
