--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -177,6 +177,8 @@ hi:
     select another chapter: "कृपया दूसरा अध्याय चुनिए"
     view in reader: "देखिये %{reference} रीडर में"
   users:
+    unverified heading: "लग-भग सम्पूर्ण !"
+    unverified message: "ऐसा लगता है आप अधूरे सेट अप अकाउंट में साइन इन की कोशिश कर रहे हैं |आप की तरफ से एक आखरी स्टेप बाकी हैं:कृपया YouVersion द्वारा भेजा गया  कन्फर्मेशन इमेल में वेरीफिकेशन लिंक पर क्लिक करे|इमेल प्राप्त नहीं हुआ?अपना स्पैम फोल्डर जाँचे या <a href='%{resend_path}'> कन्फर्मेशन इमेल पुन:भेजे </a>"
     reset connection: "कृपया त्रुटी के लिए क्षमा कीजिए|इस कनेक्शन को हटाकर पुन: कंनेक्ट करे|"
     settings: "सेटिंग्स"
     no connection friends: "आपके मित्र%{connection }YouVersion में प्रत्यक्ष नहीं हुए हैं |"
@@ -646,6 +648,7 @@ hi:
     404 message: "कृपया क्षमा कीजिए,आपके द्वारा अन्वेषित पेज नहीं मिल सका |"
     408 message: "हमारे सर्वर द्वारा प्रतिक्रिया नहीं जताने के क्षमा चाहते हैं|"
     408 explanation: "दोबारा कोशिश करे <a href= %{reload_path}>reloading</a>.हमे इस सांकेतिक खराबी की जानकारी हैं,दोहराए जाने पर जल्द से जल्द सुधारने की तैयारी हैं| "
+    try again: "पुन:कोशिश करे"
   versions:
     index title: "उपलब्ध संस्करण "
     publisher widget title: "प्रकाशक "
