--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -66,6 +66,7 @@ ko:
   successful sign-out: "로그아웃 됨."
   invalid login: "사용자명 또는 비밀번호 오류"
   invalid password: "틀린 비밀번호"
+  sign back in: "보안을 위해서 로그인 후 2주 후면 자동 해제됩니다.  다시 로그인 해주세요."
   youversion: "YouVersion"
   username or email prompt: "사용자명 (혹은 이메일)"
   password prompt: "비밀번호"
@@ -176,6 +177,8 @@ ko:
     select another chapter: "다른 장을 택하세요"
     view in reader: "리더에서 %{reference}  보기"
   users:
+    unverified heading: "거의 끝났습니다!"
+    unverified message: "설정이 완전히 끝나지 않은 계정에 로그인을 하실려는 것 같군요.   YouVersion이 보낸  확인 이메일 내용 안에 있는 확인 절차  링크를 클릭하시면 됩니다.  메일을 찾을 수가 없으시면 스팸 폴더를 확인하시거나  <a href='%{resend_path}'>확인 이메일 재발송</a>을 클릭하세요."
     reset connection: "죄송합니다.  오류가 발생했습니다.  다시 연결을 시도해주세요."
     settings: "설정"
     no connection friends: "%{connection} 친구들 중 YouVersion에 가입하시 분이 없습니다."
@@ -194,6 +197,7 @@ ko:
     follow: "팔로우"
     follow user: "%{user}님 팔로우 하기"
     unfollow: "팔로우 취소"
+    unfollow user: "%{user} 팔로우 중지"
     following title: "팔로윙하는 사람들"
     user does not follow you: "%{user} 님은 회원님을 팔로우하지 않습니다."
     recent activity: "최근활동"
@@ -386,6 +390,7 @@ ko:
     creation form errors: "아래의 이유로 인해서 책갈피가 만들어지지 않았습니다."
     successfully created: "책갈피 추가"
     successfully deleted: "책갈피 제거"
+    successfully updated: "책갈피가 업데이트 되었습니다."
     labels placeholder: "여러개의 라벨은 쉼표로 구분 해 주세요."
     save: "책갈피 저장"
     confirm delete: "예, 확실합니다."
@@ -560,7 +565,7 @@ ko:
     translation title: "YouVersion 번역팀"
     learn more: "더 알아보기"
     bible dot com title: "옛 Bible.com은 어떻게 되는 것이지요?"
-    bible dot com copy: "Bud and Betty Miller 혹은 옛 Bible.com의 자료를 찾으신다면,  <a href='http://www.bibleresources.org'>BibleResources.org</a>를 방문하십시오."
+    bible dot com copy: "Bud and Betty Miller 혹은 옛 Bible.com의 Christ Unlimited Ministries 에 관한 자료를 찾으신다면,  <a href='http://www.bibleresources.org'>BibleResources.org</a>를 방문하십시오."
   press page:
     title: "관련 기사"
     contact header: "기사 자료 문의"
@@ -639,8 +644,18 @@ ko:
       'on': "켜기"
       'off': "끄기"
   app errors:
-    404 explanation: "<em>%{requested_path}</em> 페이지를 발견하지 못했습니다.  만약 이 페이지가 존재하는 페이지라고 생각되시면, <a href='%{support_url}'>지원팀</a>에게 알려 주십시오. 혹은 <a href='%{reader_path}'>reader</a>로 되돌아 가십시오."
+    404 explanation: "다시 한 번  <a href='%{reader_path}'>home page</a>를 시도해주세요. 지속적으로 작동이 되지 않으면 <a href='%{support_url}'>지원팀</a>에게 알려 주십시오."
     404 message: "죄송합니다. 찾으시는 페이지가 없습니다."
+    408 message: "서버 접속이 지연되고있습니다. 죄송합니다."
+    408 explanation: "이 페이지를  <a href= '%{reload_path}'>재시도</a> 해주세요.  이 오류에 대해서 통보를 받았습니다. 최대한 빨리 해결하도록 최선을 다하겠습니다."
+    try again: "재시도"
   versions:
+    index title: "사용 가능한 번역본"
     publisher widget title: "출판자"
+    visit publisher: "제공자 웹사이트"
+    read title: "이 번역본 읽기"
+    other versions: "제공자의 다른 번역본들"
+    number of versions field: "전체 번역본수:"
+    number of languages field: "전체 언어수:"
+    language and count: "%{language_name} (%{language_count})"
     public domain: "공개판"
