--- a/config/locales/no.yml
+++ b/config/locales/no.yml
@@ -66,6 +66,7 @@
   successful sign-out: "Logget ut!"
   invalid login: "Ugyldig brukernavn eller passord"
   invalid password: "Feil passord"
+  sign back in: "Av hensyn til din sikkerhet, blir du logget ut etter to uker. Vennligst logg deg inn igjen."
   youversion: "YouVersion"
   username or email prompt: "Brukernavn (eller e-post):"
   password prompt: "Passord:"
@@ -176,6 +177,8 @@
     select another chapter: "Velg et annet kapittel"
     view in reader: "Vis %{reference} i lesemodus"
   users:
+    unverified heading: "Nesten fullført!"
+    unverified message: "Det ser ut til at du prøver å logge inn med en brukerkonto som ikke har fullført registreringen. Du har kun ett steg igjen: Trykk på lenken i e-post fra YouVersion for å bekrefte kontoen. Kan du ikke finne den? Se i mappe for søppelpost eller <a href='%{resend_path}'>send e-post på nytt</a>."
     reset connection: "Noe gikk galt. Kople fra for så å kople til igjen."
     settings: "Innstillinger"
     no connection friends: "Ingen av dine %{connection} venner ser ut til å være på YouVersion enda."
@@ -194,6 +197,7 @@
     follow: "Følg"
     follow user: "Følg %{user}"
     unfollow: "Slutt å følge"
+    unfollow user: "Slutt å følge  %{user}"
     following title: "Folk jeg følger"
     user does not follow you: "%{user} følger ikke deg."
     recent activity: "Nylig aktivitet"
@@ -386,6 +390,7 @@
     creation form errors: "Følgende feil gjorde at bokmerke ikke kunne opprettes:"
     successfully created: "Bokmerke opprettet"
     successfully deleted: "Bokmerke fjernet"
+    successfully updated: "Bokmerker oppdatert"
     labels placeholder: "Skill ulike emneord med komma."
     save: "Lagre bokmerke"
     confirm delete: "Ja, jeg er sikker"
@@ -641,6 +646,16 @@
   app errors:
     404 explanation: "Du kan kanskje prøve å starte igjen fra  <a href='%{reader_path}'>hjemmesiden</a>. Om du fremdeles har problemer, kontakt vårt  <a href='%{support_url}'>support team</a>."
     404 message: "Beklager, siden du ser etter finnes ikke."
+    408 message: "Våre servere har desverre ikke gitt respons innen rimelig tid."
+    408 explanation: "Du kan forsøke igjen ved <a href= '%{reload_path}'>å laste inn siden</a>om igjen. Vi er blitt gjort oppmerksom på at noe gikk galt og vil se på eventuelle vedvarende problemer så fort som mulig."
+    try again: "Prøv igjen"
   versions:
+    index title: "Tilgjengelige bibelutgaver"
     publisher widget title: "Utgiver"
+    visit publisher: "Gå til forlagets nettsted"
+    read title: "Les denne utgaven"
+    other versions: "Andre bibelutgaver fra dette forlaget"
+    number of versions field: "Totalt antall oversettelser:"
+    number of languages field: "Totalt antall språk:"
+    language and count: "%{language_name} (%{language_count})"
     public domain: "Offentlig område"
