--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -58,7 +58,7 @@ pl:
   my notifications: "Zarządzaj powiadomieniami"
   my connections: "Połączone konta"
   my devices: "Połączone urządzenia"
-  language name: "polski"
+  language name: "Polski"
   sign up: "Zarejestruj się"
   have an account: "Czy masz już konto?"
   no account: "Nie masz konta?"
@@ -66,6 +66,7 @@ pl:
   successful sign-out: "Wylogowałeś się!"
   invalid login: "Nieprawidłowa nazwa lub hasło"
   invalid password: "Niepoprawne hasło."
+  sign back in: "Dla twojego bezpieczeństwa, loginy wygasają po dwóch tygodniach. Prosimy zaloguj się ponownie."
   youversion: "YouVersion"
   username or email prompt: "Nazwa użytkownika (lub e-mail):"
   password prompt: "Hasło:"
@@ -384,6 +385,7 @@ pl:
     creation form errors: "Poniższe błędy nie pozwoliły na utworzenie zakładki:"
     successfully created: "Zakładka dodana"
     successfully deleted: "Zakładka usunięta"
+    successfully updated: "Zakładka zaktualizowana"
     labels placeholder: "Oddziel kolejne etykiety przecinkami."
     save: "Zapisz zakładkę"
     confirm delete: "Tak, na pewno."
@@ -557,6 +559,7 @@ pl:
     translation title: "Nasze zespoły tłumaczeniowe"
     learn more: "Dowiedz się więcej"
     bible dot com title: "Co stało się ze starym Bible.com?"
+    bible dot com copy: "Jeśli szukasz informacji o Christ Unlimited Ministries Buda i Betty Miller lub starej strony Bible.com prosimy odwiedź nową stronę pod adresem <a href='http://www.bibleresources.org'>BibleResources.org</a>"
   press page:
     title: "Strefa prasy"
     contact header: "Kontakt dla informacji prasowych"
@@ -635,7 +638,16 @@ pl:
       'on': "Włącz"
       'off': "Wyłącz"
   app errors:
+    404 explanation: "Możesz spróbować rozpocząć ponownie od <a href='%{reader_path}'>strony głównej</a>. Nadal masz problem? Skontaktuj się z naszym <a href='%{support_url}'>zespołem wsparcia</a>."
     404 message: "Niestety, strona którą szukasz nie została znaleziona."
+    try again: "Spróbuj ponownie"
   versions:
+    index title: "Dostępne przekłady"
     publisher widget title: "Wydawca"
+    visit publisher: "Odwiedź stronę wydawcy"
+    read title: "Czytaj ten przekład"
+    other versions: "Inne przekłady tego wydawcy"
+    number of versions field: "Łącznie przekładów:"
+    number of languages field: "Łączna ilość języków:"
+    language and count: "%{language_name} (%{language_count})"
     public domain: "Domena publiczna"
