--- a/config/locales/tl.yml
+++ b/config/locales/tl.yml
@@ -172,11 +172,13 @@ tl:
     invalid chapter title: "Tungkol sa Bersyon na Ito"
     invalid chapter text: "Ang chapter ay wala sa bersyong ito."
     invalid secondary chapter text: "Ang chapter na ito ay wala sa iyong sekondaryang bersyon."
-    no secondary version title: "Tungkol sa Parallel Comparison"
-    no secondary version text: "Ang %{language_name} ay may isang version lamang, kaya hindi kami makapili ng secondary version para sa iyo. Pumili ng secondary version para sa iyong parallel comparison."
+    no secondary version title: "Tungkol sa Magkahilerang Paghahambing"
+    no secondary version text: "Ang %{language_name} ay may isang salin lamang, kaya hindi kami makapili ng ikalawang salin para sa iyo. Pumili ng ikalawang salin para sa iyong magkahilerang paghahambing."
     select another chapter: "Pumili ng Ibang Chapter"
     view in reader: "Tingnan ang %{reference} sa Reader"
   users:
+    unverified heading: "Halos Tapos Na!"
+    unverified message: "Mukhang nais mong mag-sign in sa isang account na hindi pa lubusang nalilikha. Isang hakbang na lamang: pindutin ang link sa naipadalang email ng YouVersion para makumpirma ito. Hindi mo ba makita ang email? Tingnan ang spam folder o <a href='%{resend_path}'>humiling na maipadala muli ang email</a>."
     reset connection: "Paumanhin, nagkaroon ng pagkakamali. Paki-tanggal at muling i-konekta itong koneksyon. "
     settings: "Mga Setting"
     no connection friends: "Mukhang wala pa sa iyong %{connection} mga kaibigan ay nasa YouVersion sa kasalukuyan."
@@ -221,7 +223,7 @@ tl:
     no devices download copy: "Base sa online na Bibliya, YouVersion.com, ang Bible App ay isang libreng Bibliya na maaaring ma-install sa kahit anong mobile na gamit. Pinahihintulotan ng Bible App ang mga manggagamit na magbasa ng Bibliya, makibahagi ng mga berso sa kanilang mga social network, i-bookmark ang mga paboritong talata, at iba pa&mdash; lahat sa format na akma sa kanilang mobile na kabuhayan.  Bumisita sa <a href='http://www.youversion.com/download'>youversion.com/download</a> mula sa iyong mobile na kagamitan para i-download ang Bible App at kumonekta sa iyong account!"
     yes delete: "Oo, Burahin ang Aking Account"
     account delete success: "Ang iyong YouVersion account ay matagumpay nang naalis. Umaasa kaming magkaroon ka ng makabuluhang paraan upang makapag-interact gamit ang Bibliya. Ilan sa mga apps na ito ay maaaring makatulong sa iyong pag-usad: <a href=http://www.youversion.com/free-bible-apps>http://www.youversion.com/free-bible-apps</a>"
-    delete account description: "Pag buburahin mo ang iyong account, permanente mong maaalis ang lahat ng impormasyon, history, at personalization (tulad ng mga tala, mga bookmarks, mga highlights, atpb.) na napapaloob sa YouVersion.com at ang BibleApp. Ang aksiyong ito ay hindi mo na maibabalik o ng aming team. Pag sigurado kang gusto mong magforward, ipagpatuloy sa ibaba."
+    delete account description: "Pag buburahin mo ang iyong account, permanente mong maaalis ang lahat ng impormasyon, kasaysayan, at gawain (tulad ng mga tala, bookmarks, highlights, atpb.) na napapaloob sa YouVersion.com at Bible App. Ang aksiyong ito ay hindi mo na maibabalik o ng aming team. Kung sigurado ka na, ipagpatuloy sa ibaba."
     user recent activity: "Mga Huling Aktibidad ni %{user}"
     user notes: "Mga Tala ni %{user}"
     my friends: "Mga Kaibigan"
@@ -239,12 +241,12 @@ tl:
     confirm update email success: "Salamat! Na-update mo na ang iyong email address."
     confirm update email error: "Paumanhin, may mga problema sa  planong pagbabago sa email address."
     account confirmed: "Nakonfirm na ang iyong account!"
-    account already confirmed: "Ang iyong account ay nakonfirm na! Magsign-in para magpatuloy."
+    account already confirmed: "Ang iyong account ay napatunayan na! Magsign-in para magpatuloy."
     errors confirming account: "Paumanhin, nagkaroon ng problema sa iyong dulo. Maaari mong i-refresh ang iyong browser para subukan uli, o kung patuloy itong nangyayari, i-click sa ibaba para humingi ng bagong email na kumpirmasyon. "
     invalid confirm hash: "Paumanhin, mukhang di valid ang kodigong pang-kumpirmasyon.  Maaari mong i-refresh ang iyong browser para subukan uli, o kung patuloy itong nangyayari, i-click sa ibaba para humingi ng bagong kodigong pang-kumpirmasyon. "
     confirm password to continue: "Maaaring ipasok ang iyong password para mag-sign-in at magsimula."
     invalid email forgot: "Paumanhin, wala kaming mahanap na ganyang email address. Pakiulit po."
-    error deleting account: "Paumanhin, may problema sa aming end. Pakiulit po o kaya ay kontakin ang aming support."
+    error deleting account: "Paumanhin, may problema sa aming koneksyon. Pakiulit po o kaya ay kontakin ang aming support."
     send new password button: "Magpadala Ng Bagong Password"
     forgot password copy: "Ipasok ang email address at i-klik ang  Magpadala Ng Bagong Password, at ipadadala namin sa email mo ang bagong password."
     forgot password check: "Tagumpay! I-chek ang iyong email para sa iyong bagong password."
@@ -372,7 +374,7 @@ tl:
       newsletter: "Panatiliin akong updated sa mga YouVersion announcements."
       note_like: "Paki-notify ako pag may nagkagusto sa aking mga tala."
       reading_plans: "Paki-notify ako kung may pagbabago sa mga reading plans na nasimulan ko."
-      publishing partners: "Lagi akong i-update ng mga balita mula sa mga content partners ng YouVersion."
+      publishing partners: "Lagi akong padalhan ng mga balita mula sa mga content partners ng YouVersion."
       update: "I-update ang Notifications"
   bookmarks:
     edit: "I-edit"
@@ -646,6 +648,7 @@ tl:
     404 message: "Ikinalulungkot namin, subalit ang pahinang hinahanap mo ay nawawala."
     408 message: "Sa kasamaang palad ang server namin ay di sumagot sa tamang oras. "
     408 explanation: "Subukan mo ulit sa pamamagitan ng <a href= %{reload_path}>pag-reload</a> ng pahina. Kami ay naalerto na at tutugunan ang paulit-ulit na mga problema sa lalong madaling panahon.  "
+    try again: "Subukang Muli"
   versions:
     index title: "Mga Maaaring Gamiting Salin"
     publisher widget title: "Naglathala"
