--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -644,7 +644,7 @@ ja:
   app errors:
     404 explanation: "<a href='%{reader_path}'>ホームページ</a>へ戻ってみてください。\n問題が継続する場合は、<a href='%{support_url}'>support team</a>までご連絡ください。"
     404 message: "申し訳ありませんが、お探しのページは見つかりません。"
-    408 message: "申し訳ございませんが、サーバが応答するのに時間がかかっています。"
+    408 message: "申し訳ございませんが、サーバの応答に時間がかかっています。"
     408 explanation: "もう一度ページを <a href= %{reload_path}>リロード</a> してみてください。こちらでも事態を把握しておりますので、継続して発生する問題につきましては、できるだけ早く対処させていただきます。"
   versions:
     index title: "ご利用いただける聖書訳"
@@ -652,7 +652,7 @@ ja:
     visit publisher: "出版元のウェブサイトにアクセスする"
     read title: "この聖書訳を読む"
     other versions: "この出版元から出ているその他の聖書訳"
-    number of versions field: "聖書訳の数"
+    number of versions field: "聖書訳の数:"
     number of languages field: "翻訳言語の数"
     language and count: "%{language_name} (%{language_count})"
     public domain: "パブリックドメイン"
