--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -642,6 +642,7 @@ tr:
   app errors:
     404 explanation: "<em>%{requested_path}</em> adresine bağlı olan sayfayı bulamadık. Bu sayfanın mevcut olması gerektiği kanısındaysanız, lütfen <a href='%{support_url}'>destek takımı</a> ile irtibata geçiniz. Yoksa <a href='%{reader_path}'>okuyucuya</a> geri gidiniz."
     404 message: "Aradığınız sayfa bulunamıyor, özür dileriz."
+    try again: "Yeninde dene"
   versions:
     publisher widget title: "Yayıncı"
     visit publisher: "Yayımcının Web Sitesi"
