--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -542,7 +542,7 @@ en:
     card exp date:                              "Expiration date (MMYY)"
     receipt:                                    "Email me a copy of my receipt."
     preview:                                    "Preview Donation"
-    header copy:                                "Together, we could become the most Bible-engaged generation in history. Your support means people can open God's Word on more platforms, in more languages, in more versions, and in more countries than ever before. Please fill out the form below to make your donation. We'll collect payment info on the next screen."
+    header copy:                                "Together, we could become the most Bible-engaged generation in history. Your support means people can open God's Word on more platforms, in more languages, in more versions, and in more countries than ever before. Please fill out the form below to make your donation. We'll collect payment info on the next screen. We accept Visa or Mastercard."
     header confirm copy:                        "Together, we could become the most Bible-engaged generation in history. Your support means people can open God's Word on more platforms, in more languages, in more versions, and in more countries than ever before. Click Donate Now to make your donation."
     donate now button:                          "Donate Now"
     email header:                               "YouVersion, a ministry of LifeChurch.tv, has received your donation. No goods or services were provided in exchange for the donation, except intangible religious benefits. Please contact giving@lifechurch.tv with questions."
