In-Reader Reading Plans: ClientSettings abstraction + more Reader and js cleanup.
Adding missing ClientSettings file.

Integration testing for new Subscription, minor copy updates for catching up, etc.

Adding integration tests for reference-less days and devotionals.

Bringing in previous bug fixes for parallel mode and fullscreen mode + css fix.

Devotional in sidebar widget.

Prev & Next navigation.

Mute + Focused styling and new scrolling.

Copy change for reading view notice.

Updating client settings with trans notes, cross refs and highlights.

Proper version

don't fail if no sidebar_presenter is defined

--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -451,9 +451,9 @@ en-GB:
     current progress html: "Day <b>%{day}</b> of <b>%{total_days}</b>"
     start date _ before date string: "Start Date:"
     end date _ before date string: "End Date:"
-    are you behind: "Falling a bit behind?"
+    are you behind: "Ahead of schedule or falling behind?"
     do you want to reset: "Want to try again?"
-    catch up text: "Shift today's reading back to your last completed reading (day %{last_completed_day} of the plan)."
+    catch up text: "Shift today's reading to your last completed reading (day %{last_completed_day} of the plan)."
     catch up description only: "If you ever fall behind on your readings, don't worry! You can always shift the current reading back to your last completed reading."
     catch me up: "Reset the reading plan?"
     restart description: "You can restart your plan. All of your reading history and progress will be reset and start from the beginning."
